--- a/web-app/src/app/shared/layout/layout.component.html
+++ b/web-app/src/app/shared/layout/layout.component.html
@@ -5,7 +5,7 @@
       <li nz-menu-item [nzMatchRouter]="true" routerLink="/rental" >Rental</li>
       <li nz-menu-item [nzMatchRouter]="true">Page 2</li>
       <li nz-menu-item [nzMatchRouter]="true">Page 3</li>
-      <li nz-menu-item [nzMatchRouter]="true" class="right">Login</li>
+      <li nz-menu-item [nzMatchRouter]="true" routerLink="/login" class="right">Login</li>
     </ul>
   </nz-header>
   <nz-content>
