--- a/web-app/src/app/shared/bike-list/bike-list.component.html
+++ b/web-app/src/app/shared/bike-list/bike-list.component.html
@@ -1,12 +1,8 @@
 <nz-row [nzGutter]="[16, 16]">
   <ng-container *ngFor="let bike of bikes">
     <nz-col [nzSpan]="24" [nzSm]="12" [nzMd]="8" [nzLg]="6">
-      <app-bike-card
-        [label]="bike.name"
-        [desc]="bike.desc"
-      >
+      <app-bike-card [bike]="bike" (didClick)="didClickItem.emit($event)">
       </app-bike-card>
     </nz-col>
   </ng-container>
-
 </nz-row>
