--- a/web-app/src/app/pages/rental/detail/rental-detail.component.html
+++ b/web-app/src/app/pages/rental/detail/rental-detail.component.html
@@ -14,8 +14,9 @@
 
         <nz-row [nzGutter]="32">
           <nz-col nzSpan="12">
-            <h1>{{bike.label}}</h1>
-            <p>{{bike.desc}}</p>
+            <h1>{{bike?.label}}</h1>
+            <!-- <p>{{bike?.desc}}</p> -->
+            <p>Lorem ipsum</p>
             <b style="margin-right: 15px;">Rate :</b>
             <nz-rate [ngModel]="3.5" nzAllowHalf nzDisabled></nz-rate>
           </nz-col>
