--- a/web-app/src/app/pages/rental/detail/rental-detail.component.html
+++ b/web-app/src/app/pages/rental/detail/rental-detail.component.html
@@ -29,7 +29,7 @@
         </nz-row>
 
         <nz-divider nzText="Top reviews and feedback" nzOrientation="left"></nz-divider>
-        <app-feedback-list [feedbacks]="feedbacks"></app-feedback-list>
+        <app-feedback-list [feedbacks]="undefined"></app-feedback-list>
       </nz-col>
     </nz-row>
   </app-container>
