--- a/web-app/src/app/pages/login/login.component.html
+++ b/web-app/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
       <nz-form-item>
         <nz-form-control nzErrorTip="Please input your username!">
           <nz-input-group nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="userName" placeholder="Username" />
+            <input type="text" nz-input formControlName="username" placeholder="Username" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
