--- a/web-app/src/app/pages/rental/publish/rental-publish.component.html
+++ b/web-app/src/app/pages/rental/publish/rental-publish.component.html
@@ -2,7 +2,7 @@
   <!-- LABEL INPUT -->
   <nz-form-item>
     <nz-form-label [nzSpan]="6" nzRequired>Label</nz-form-label>
-    <nz-form-control [nzSpan]="13">
+    <nz-form-control [nzSpan]="13" nzErrorTip="Please input valid label!">
       <input nz-input formControlName="label" placeholder="Type the name or model of bike" />
     </nz-form-control>
   </nz-form-item>
@@ -12,6 +12,25 @@
     <nz-form-label [nzSpan]="6">Description</nz-form-label>
     <nz-form-control [nzSpan]="13">
       <textarea formControlName="desc" nz-input rows="4" placeholder="Type a description of the bike..."></textarea>
+    </nz-form-control>
+  </nz-form-item>
+
+  <!-- STATE INPUT -->
+  <nz-form-item>
+    <nz-form-label [nzSpan]="6" nzFor="state" nzRequired>State</nz-form-label>
+    <nz-form-control [nzSpan]="13" nzErrorTip="Please select state for bike!">
+      <nz-select
+        id="state"
+        formControlName="state"
+        nzPlaceHolder="Choice state of bike"
+      >
+        <nz-option [nzValue]="bikeState.EXCELLENT" [nzLabel]="bikeState.EXCELLENT"></nz-option>
+        <nz-option [nzValue]="bikeState.VERY_GOOD" [nzLabel]="bikeState.VERY_GOOD"></nz-option>
+        <nz-option [nzValue]="bikeState.GOOD" [nzLabel]="bikeState.GOOD"></nz-option>
+        <nz-option [nzValue]="bikeState.CORRECT" [nzLabel]="bikeState.CORRECT"></nz-option>
+        <nz-option [nzValue]="bikeState.BAD" [nzLabel]="bikeState.BAD"></nz-option>
+        <nz-option [nzValue]="bikeState.VERY_BAD" [nzLabel]="bikeState.VERY_BAD"></nz-option>
+      </nz-select>
     </nz-form-control>
   </nz-form-item>
 
@@ -33,5 +52,5 @@
 
 <div *nzModalFooter>
   <button nz-button nzType="default" (click)="destroyModal()">Cancel</button>
-  <button nz-button nzType="primary" (click)="destroyModal()">Publish</button>
+  <button nz-button nzType="primary" (click)="submitModal()" [nzLoading]="submiting">Publish</button>
 </div>
