--- a/web-app/src/app/pages/rental/detail/rental-detail.component.html
+++ b/web-app/src/app/pages/rental/detail/rental-detail.component.html
@@ -7,18 +7,23 @@
       <nz-col nzSpan="6">
         <app-bike-card [bike]="bike"></app-bike-card>
         <ng-container *ngIf="canRent">
-          <nz-divider></nz-divider>
+          <nz-divider nzText="Actions" nzOrientation="left"></nz-divider>
           <button nz-button nzType="primary" nzBlock (click)="createRentModal()">Rent the bike</button>
           <button nz-button nzBlock>Add to cart</button>
         </ng-container>
+
+        <ng-container *ngIf="rentals && rentals.length !== 0">
+          <nz-divider nzText="Rental list" nzOrientation="left"></nz-divider>
+          <app-rental-list [rentals]="rentals" (didClickRent)="createFeedbackModal($event)"></app-rental-list>
+        </ng-container>
+
       </nz-col>
       <nz-col nzSpan="18">
 
         <nz-row [nzGutter]="32">
           <nz-col nzSpan="12">
             <h1>{{bike?.label}}</h1>
-            <!-- <p>{{bike?.desc}}</p> -->
-            <p>Lorem ipsum</p>
+            <p>{{bike?.desc}}</p>
             <b style="margin-right: 15px;">Rate :</b>
             <nz-rate [ngModel]="3.5" nzAllowHalf nzDisabled></nz-rate>
           </nz-col>
