--- a/web-app/src/app/shared/feedback-card/feedback-card.component.html
+++ b/web-app/src/app/shared/feedback-card/feedback-card.component.html
@@ -2,7 +2,7 @@
   <nz-avatar nz-comment-avatar nzIcon="user"></nz-avatar>
   <nz-comment-content>
     <nz-rate [ngModel]="3.5" nzAllowHalf nzDisabled></nz-rate>
-    <p><b>{{feedback.title}}</b></p>
-    <p>{{feedback.desc}}</p>
+    <p><b>{{feedback.comment}}</b></p>
+    <p>{{feedback.comment}}</p>
   </nz-comment-content>
 </nz-comment>
