feat: shop page

--- a/web-app/src/app/pages/customer/detail/customer-detail.component.html
+++ b/web-app/src/app/pages/customer/detail/customer-detail.component.html
@@ -17,7 +17,7 @@
 
         <nz-row nzType="flex">
           <nz-statistic nzTitle="Number of bike" [nzValue]="customer?.bikes?.length"></nz-statistic>
-          <nz-statistic nzTitle="Number of reviews" [nzValue]="12" style="margin: 0 32px;"></nz-statistic>
+          <!-- <nz-statistic nzTitle="Number of reviews" [nzValue]="12" style="margin: 0 32px;"></nz-statistic> -->
         </nz-row>
 
         <nz-divider nzText="Owned bike" nzOrientation="center"></nz-divider>
