update: front pages

--- a/web-app/src/app/pages/bank/bank.component.html
+++ b/web-app/src/app/pages/bank/bank.component.html
@@ -11,6 +11,8 @@
 
     <app-wallet-list
       [wallets]="wallets"
+      (didClickAdd)="addMoney($event)"
+      (didClickRemove)="removeMoney($event)"
     >
     </app-wallet-list>
 
