--- a/web-app/src/app/pages/shop/shop.component.html
+++ b/web-app/src/app/pages/shop/shop.component.html
@@ -2,6 +2,11 @@
   <app-container>
     <nz-page-header nzTitle="Bike Shop" nzSubtitle="Choice the bike you wan't to buy">
       <nz-page-header-extra>
+        <nz-select [(ngModel)]="currency" style="margin-right: 16px;">
+          <nz-option nzValue="EURO" nzLabel="EURO"></nz-option>
+          <nz-option nzValue="USD" nzLabel="USD"></nz-option>
+          <nz-option nzValue="YEN" nzLabel="YEN"></nz-option>
+        </nz-select>
         <button nz-button nzType="primary" (click)="createCartDrawer()">
           <i nz-icon nzType="shopping-cart" nzTheme="outline"></i>
           Show your cart
