--- a/web-app/src/app/shared/wallet-list/wallet-list.component.html
+++ b/web-app/src/app/shared/wallet-list/wallet-list.component.html
@@ -7,7 +7,12 @@
   <nz-row [nzGutter]="[16, 16]">
     <ng-container *ngFor="let wallet of wallets">
       <nz-col [nzSpan]="24" [nzSm]="12" [nzMd]="8" [nzLg]="6">
-        <app-wallet-card [wallet]="wallet" (didClick)="didClickItem.emit($event)"></app-wallet-card>
+        <app-wallet-card
+          [wallet]="wallet"
+          (didClick)="didClickItem.emit($event)"
+          (didClickAdd)="didClickAdd.emit($event)"
+          (didClickRemove)="didClickRemove.emit($event)"
+        ></app-wallet-card>
       </nz-col>
     </ng-container>
   </nz-row>
