--- a/web-app/src/app/shared/wallet-card/wallet-card.component.html
+++ b/web-app/src/app/shared/wallet-card/wallet-card.component.html
@@ -9,13 +9,13 @@
         <nz-statistic [nzValue]="wallet.balance" [nzTitle]="'Account Balance'"></nz-statistic>
       </nz-col>
       <nz-col [nzSpan]="12">
-        <button nz-button nzBlock>
+        <button nz-button nzBlock (click)="didClickRemove.emit(wallet.currency)">
           <i nz-icon nzType="minus-square" nzTheme="outline"></i>
           100
         </button>
       </nz-col>
       <nz-col [nzSpan]="12">
-        <button nz-button nzType="primary" nzBlock>
+        <button nz-button nzType="primary" nzBlock (click)="didClickAdd.emit(wallet.currency)">
           <i nz-icon nzType="plus-square" nzTheme="outline"></i>
           100
         </button>
