update: init project stat

--- a/web-app/src/app/pages/bank/add/bank-add.component.html
+++ b/web-app/src/app/pages/bank/add/bank-add.component.html
@@ -10,7 +10,7 @@
       >
         <nz-option nzValue="EURO" nzLabel="EURO"></nz-option>
         <nz-option nzValue="USD" nzLabel="USD"></nz-option>
-        <nz-option nzValue="YEN" nzLabel="YEN"></nz-option>
+        <nz-option nzValue="CNY" nzLabel="CNY"></nz-option>
       </nz-select>
     </nz-form-control>
   </nz-form-item>
